src/test/ui/impl-trait/issues/issue-58504.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in variable binding
  --> $DIR/issue-58504.rs:10:16
   |
LL |     let gens: [impl Generator<Return=!, Yield=()>;2] = [ mk_gen(), mk_gen() ];
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
